--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.2.0",
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
+    "ng4-charts": "^1.0.2",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
